<?xml version="1.0" encoding="utf-8"?>
<com.admiral.uikit.components.button.ButtonGooglePay xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnGoogle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />