...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/module_x4">

            <com.admiral.uikit.components.button.ButtonRule
                android:id="@+id/btnRule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/module_x11"
                android:paddingStart="@dimen/module_x4"
                android:paddingEnd="@dimen/module_x4"
                app:admiralRuleText="@string/buttons_example_rule"
...
