...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="com.admiral.uikit.layout.ConstraintLayout">

    <com.admiral.uikit.components.text.TextView
        android:id="@+id/calendarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/module_x4"
        android:layout_marginTop="@dimen/module_x2"
        android:clickable="true"
        android:drawablePadding="@dimen/module_x1"
...
